-Penwing - relacion entre entidades y creacion de usuario -creacion de entidad Credit/Frontend -validacion Login _walley e informacion -Correccion a BigDecimal. -BUy/Sell -mensaje de recepcion y DTO .Transactions -testeo CreditController , ArticleController y CustomerController